[tool.poetry]
name = "pycture-search-engine"
version = "0.1.0"
description = ""
authors = ["Lunik <lunik@tiwabbit.fr>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "pycture_search_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
numpy = "^1.25.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
